--- a/templates/blockchain_view.html
+++ b/templates/blockchain_view.html
@@ -40,7 +40,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Block</h5>
                     <p class="card-text"><strong>Timestamp:</strong> {{.Timestamp}}</p>
-                    <p class="card-text"><strong>PrevBlockHash:</strong> {{printf "%x" .PrevBlockHash}}</p>
+                    <p class="card-text"><strong>PrevBlockHash:</strong> {{.PrevBlockHash}}</p>
                     <p class="card-text"><strong>Hash:</strong> {{.Hash}}</p>
                     <p class="card-text"><strong>Nonce:</strong> {{.Nonce}}</p>
                     <div class="card">
